# jags-moduleTemplate

./: .gitignore  README  README.md  configure.ac
module/: configure.ac
module/src/distributions/: Makefile.am  templateDist1.cc  templateDist1.h
module/src/functions/: templateFun1.h  templateFun2.h  templateFun3.h
src/: Makefile.am  example.cc
src/distributions/: templateDist1.cc  templateDist1.h
src/functions/: Makefile.am  templateFun1.cc  templateFun2.cc  templateFun2.h  templateFun3.cc
